// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`localizeRoutes > Route options resolver: routing disable > should be disabled routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "about",
    "path": "/about",
  },
]
`;

exports[`localizeRoutes > basic > should be localized routing 1`] = `
[
  {
    "meta": {
      "locale": true,
    },
    "name": "home",
    "path": "/",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "home___locale",
    "path": "/:locale(en|ja)",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "about",
    "path": "/about",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "about___locale",
    "path": "/:locale(en|ja)/about",
  },
]
`;

exports[`localizeRoutes > has children > should be localized routing 1`] = `
[
  {
    "children": [
      {
        "meta": {
          "locale": true,
        },
        "name": "user-profile",
        "path": "profile",
      },
      {
        "meta": {
          "locale": true,
        },
        "name": "user-posts",
        "path": "posts",
      },
    ],
    "meta": {
      "locale": true,
    },
    "name": "user",
    "path": "/user/:id",
  },
  {
    "children": [
      {
        "meta": {
          "locale": true,
        },
        "name": "user-profile___locale",
        "path": "/:locale(en|ja)/user/:id/profile",
      },
      {
        "meta": {
          "locale": true,
        },
        "name": "user-posts___locale",
        "path": "/:locale(en|ja)/user/:id/posts",
      },
    ],
    "meta": {
      "locale": true,
    },
    "name": "user___locale",
    "path": "/:locale(en|ja)/user/:id",
  },
]
`;

exports[`localizeRoutes > route name separator > should be localized routing 1`] = `
[
  {
    "meta": {
      "locale": true,
    },
    "name": "home",
    "path": "/",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "home__locale",
    "path": "/:locale(en|ja)",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "about",
    "path": "/about",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "about__locale",
    "path": "/:locale(en|ja)/about",
  },
]
`;

exports[`localizeRoutes > strategy: "no_prefix" > should be localized routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "about",
    "path": "/about",
  },
]
`;

exports[`localizeRoutes > strategy: "prefix" > should be localized routing 1`] = `
[
  {
    "meta": {
      "locale": true,
    },
    "name": "home",
    "path": "/",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "index",
    "path": "/",
    "redirect": "/en",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "home___locale",
    "path": "/:locale(en|ja)",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "about",
    "path": "/about",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "index",
    "path": "/about",
    "redirect": "/en",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "about___locale",
    "path": "/:locale(en|ja)/about",
  },
]
`;

exports[`localizeRoutes > strategy: "prefix_and_default" > should be localized routing 1`] = `
[
  {
    "meta": {
      "locale": true,
    },
    "name": "home",
    "path": "/",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "home___locale",
    "path": "/:locale(en|ja)",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "about",
    "path": "/about",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "about___locale",
    "path": "/:locale(en|ja)/about",
  },
  {
    "children": [
      {
        "meta": {
          "locale": true,
        },
        "name": "user-profile",
        "path": "profile",
      },
      {
        "meta": {
          "locale": true,
        },
        "name": "user-posts",
        "path": "posts",
      },
    ],
    "meta": {
      "locale": true,
    },
    "name": "user",
    "path": "/user/:id",
  },
  {
    "children": [
      {
        "meta": {
          "locale": true,
        },
        "name": "user-profile___locale",
        "path": "/:locale(en|ja)/user/:id/profile",
      },
      {
        "meta": {
          "locale": true,
        },
        "name": "user-posts___locale",
        "path": "/:locale(en|ja)/user/:id/posts",
      },
    ],
    "meta": {
      "locale": true,
    },
    "name": "user___locale",
    "path": "/:locale(en|ja)/user/:id",
  },
]
`;

exports[`localizeRoutes > strategy: "prefix_except_default" > should be localized routing 1`] = `
[
  {
    "meta": {
      "locale": true,
    },
    "name": "home",
    "path": "/",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "home___locale",
    "path": "/:locale(ja)",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "about",
    "path": "/about",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "about___locale",
    "path": "/:locale(ja)/about",
  },
]
`;

exports[`localizeRoutes > trailing slash > should be localized routing 1`] = `
[
  {
    "meta": {
      "locale": true,
    },
    "name": "home",
    "path": "/",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "home___locale",
    "path": "/:locale(en|ja)/",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "about",
    "path": "/about",
  },
  {
    "meta": {
      "locale": true,
    },
    "name": "about___locale",
    "path": "/:locale(en|ja)/about/",
  },
]
`;
